helm/nginx/ingress-catch-all.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: traefik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    kubernetes.io/ingress.global-static-ip-name: "traefik-http-lb"
    networking.gke.io/v1beta1.FrontendConfig: "traefik-frontend-cfg"
    networking.gke.io/managed-certificates: "traefik-cert-v2"
spec:
  defaultBackend:
    service:
      name: traefik
      port:
        number: 80
