helm/nginx/strip-path-middleware-routes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nginx-strip-path-prefix
  namespace: nginx
spec:
  stripPrefix:
    prefixes:
      - /blue
      - /green

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: nginx
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`api.victorgarciar.com`)
      kind: Rule
      services:
        - name: nginx-main
          namespace: nginx
          port: 80
    - match: Host(`api.victorgarciar.com`) && Path(`/blue`)
      kind: Rule
      middlewares:
        - name: nginx-strip-path-prefix
          namespace: nginx
      services:
        - name: nginx-deploy-blue
          namespace: nginx
          port: 80
    - match: Host(`api.victorgarciar.com`) && Path(`/green`)
      kind: Rule
      middlewares:
        - name: nginx-strip-path-prefix
          namespace: nginx
      services:
        - name: nginx-deploy-green
          namespace: nginx
          port: 80
